--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Blake Face",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-jshint": "^1.0.0",
